Build 0.6 filters incoming

--- a/labapp/templates/index.html
+++ b/labapp/templates/index.html
@@ -16,14 +16,13 @@
         <section>
             {% for row in processed_files %}
                 <h3>
-                    {{row[1]}} ## здесь тип название компании ##
+                    {{row[1]}}
                 </h3>
-                <h4>
-                    ## тут наверное надо кнопку подробнее или какую то инфу (рейтинг) ##
-                </h4>
                 <p>
-                    Дата обработки: {{row[2]}}
-                    ## Eto vasche hz nado net ##
+                     Класс: {{row[2]}}
+                </p>
+                <p>
+                     Рейтинг: {{row[3]}}
                 </p>
             {% endfor %}
         </section>
